--- a/index.html
+++ b/index.html
@@ -65,41 +65,40 @@
 
     </header>
 
-      <!-- Botón Hamburguesa -->
-      <button class="hamburger" id="menu-toggle" aria-label="Abrir menú">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
+    <!-- Botón Hamburguesa -->
+    <button class="hamburger" id="menu-toggle" aria-label="Abrir menú">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
 
 
-      <nav class="menu-fullscreen" id="fullscreen-menu">
-        <button class="close-menu" id="close-menu" aria-label="Cerrar menú">✕</button>
-
-        <a href="#" class="menu__item" data-scrollto="0" data-i18n="menu home"></a>
-        <a href="#map" class="menu__item" data-i18n="menu about"></a>
-        <a href="#" class="menu__item" data-i18n="menu projects"></a>
-        <a href="#contact" class="menu__item" data-i18n="menu contact"></a>
-        <button id="lang-toggle" class="lang-btn">ES</button>
-        <div class="social-icons">
-          <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-            <img class="redes-sociales" src="img/social_networt_icon/facebook.png">
-          </a>
-          <a href="https://x.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
-            <img class="redes-sociales" src="img/social_networt_icon/twitter.png">
-          </a>
-          <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-            <img class="redes-sociales" src="img/social_networt_icon/linkedin.png">
-          </a>
-          <a href="https://instagran.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-            <img class="redes-sociales" src="img/social_networt_icon/instagram.png">
-          </a>
-        </div>
-      </nav>
-
+    <nav class="menu-fullscreen" id="fullscreen-menu">
+      <button class="close-menu" id="close-menu" aria-label="Cerrar menú">✕</button>
+      <a href="#" class="menu__item" data-scrollto="0" data-i18n="menu home"></a>
+      <a href="#map" class="menu__item" data-i18n="menu about"></a>
+      <a href="#" class="menu__item" data-i18n="menu projects"></a>
+      <a href="#contact" class="menu__item" data-i18n="menu contact"></a>
+      <button id="lang-toggle" class="lang-btn">ES</button>
+      <div class="social-icons">
+        <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+          <img class="redes-sociales" src="img/social_networt_icon/facebook.png">
+        </a>
+        <a href="https://x.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+          <img class="redes-sociales" src="img/social_networt_icon/twitter.png">
+        </a>
+        <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+          <img class="redes-sociales" src="img/social_networt_icon/linkedin.png">
+        </a>
+        <a href="https://instagran.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <img class="redes-sociales" src="img/social_networt_icon/instagram.png">
+        </a>
+      </div>
+    </nav>
 
 
-      <script src="js/demo4/gsap-menu.js">  </script>
+
+    <script src="js/demo4/gsap-menu.js">  </script>
     </header>
     <script src="js/demo4/menu.js"></script>
   </div>
@@ -351,54 +350,20 @@
   </div>
 
 
-  <footer id="contact">
-    <div class="footer-container">
-      <div class="footer-contact-form">
-        <h3>Contacto</h3>
-        <form id="contactForm" novalidate>
-          <label for="name">Nombre</label>
-          <input type="text" id="name" name="name" required placeholder="Tu nombre" />
-          <label for="email">Correo electrónico</label>
-          <input type="email" id="email" name="email" required placeholder="tu@email.com" />
-          <label for="message">Mensaje</label>
-          <textarea id="message" name="message" rows="4" required placeholder="Escribe tu mensaje..."></textarea>
-          <button type="submit">Enviar</button>
-        </form>
-        <p id="formMessage" class="form-message"></p>
-      </div>
-      <div class="footer-info">
-        <h3>Dirección</h3>
-        <p>Av. Reforma 123, Ciudad de México, México</p>
-        <h3>Síguenos</h3>
-        <div class="social-icon">
-          <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-            <svg width="24" height="24" fill="#4267B2" viewBox="0 0 24 24">
-              <path
-                d="M22 12a10 10 0 1 0-11.5 9.9v-7h-2v-3h2v-2c0-2 1-3 3-3h2v3h-2c-1 0-1 .5-1 1v2h3l-.5 3h-2.5v7A10 10 0 0 0 22 12" />
-            </svg>
-          </a>
-          <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
-            <svg width="24" height="24" fill="#1DA1F2" viewBox="0 0 24 24">
-              <path
-                d="M22 5.9a8.2 8.2 0 0 1-2.4.7 4.1 4.1 0 0 0 1.8-2.2 8.2 8.2 0 0 1-2.6 1 4.1 4.1 0 0 0-7 3.7 11.7 11.7 0 0 1-8.5-4.3 4.1 4.1 0 0 0 1.3 5.4 4 4 0 0 1-1.9-.5v.1a4.1 4.1 0 0 0 3.3 4 4 4 0 0 1-1.9.1 4.1 4.1 0 0 0 3.8 2.9 8.3 8.3 0 0 1-5.1 1.8A8.7 8.7 0 0 1 2 18.2a11.8 11.8 0 0 0 6.3 1.8c7.5 0 11.6-6.2 11.6-11.6 0-.2 0-.5 0-.7A8.3 8.3 0 0 0 22 5.9z" />
-            </svg>
-          </a>
-          <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-            <svg width="24" height="24" fill="#0077B5" viewBox="0 0 24 24">
-              <path
-                d="M4.98 3.5a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5zm.02 4.5H2v14h3V8zm7 0h-3v14h3v-7c0-1.8 2-2 2 0v7h3v-7.5c0-3.3-4-3.2-5-1.6V8z" />
-            </svg>
-          </a>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p class="text-meta">© 2025 INDIx. All rights reserved.</p>
-        <p class="text-meta">Powered by <a href="https://www.grupoindi.com/" target="_blank"
-            rel="noopener noreferrer">Grupo INDI</a></p>
-      </div>
-    </div>
-  </footer>
+<footer id="contact">
+  <div class="footer-container">
+    <h3 class="hover-image" style="--img:url(../../img/4.png)">One "X" word (Explora)</h3>
+    <h3 class="hover-image" style="--img:url(../../img/5.png)">Two "X" word (Experimenta)</h3>
+    <h3 class="hover-image" style="--img:url(../../img/8.png)">Three "X" word ()</h3>
   </div>
+
+  <div class="footer-bottom">
+    <p class="text-meta">© 2025 INDIx. All rights reserved.</p>
+    <p class="text-meta">Powered by 
+      <a href="https://www.grupoindi.com/" target="_blank" rel="noopener noreferrer">Grupo INDI</a>
+    </p>
+  </div>
+</footer>
 
   <script src="js/imagesloaded.pkgd.min.js"></script>
 </body>
