--- a/index.html
+++ b/index.html
@@ -32,13 +32,37 @@
 </head>
 <!-- Sidebar/menu -->
 
-
-
-
-
-
-
 <body class="loading demo-4">
+
+<style>
+  .custom-cursor {
+    position: fixed;
+    pointer-events: none;
+    z-index: 9999;
+    width: 40px;
+    height: 40px;
+  }
+</style>
+
+<body>
+
+
+
+
+  <!-- SVG PUNTERO -->
+<div class="custom-cursor">
+  <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
+    <path d="M495.01,80.63v413.88H81.13c-41.77,0-75.63-33.86-75.63-75.63V4.99h413.88
+      C461.14,4.99,495.01,38.86,495.01,80.63z"
+      fill="#eeeeee" stroke="#232323" stroke-width="5" />
+  </svg>
+</div>
+
+    <script src="js/demo4/cursor.js">  </script>
+
+
+
+
   <!-- Loader -->
   <div id="loader-overlay">
     <div class="corner-icon1 top-left1">
@@ -54,27 +78,17 @@
       <img id="svg4" class="icon4" src="img/bran-icon-02.svg" alt="Icono final">
     </div>
   </div>
-
-
-
-
-
   <div class="layout">
-
-
     <header class="sidebar" id="site-header">
       <div id="svg-container"></div>
-
     </header>
-
     <!-- Botón Hamburguesa -->
     <button class="hamburger" id="menu-toggle" aria-label="Abrir menú">
       <span></span>
       <span></span>
       <span></span>
+
     </button>
-
-
     <nav class="menu-fullscreen" id="fullscreen-menu">
       <button class="close-menu" id="close-menu" aria-label="Cerrar menú">✕</button>
       <a href="#" class="menu__item" data-scrollto="0" data-i18n="menu home"></a>
@@ -118,7 +132,6 @@
 
   <!-- Sección brand -->
   <section class="brand">
-
     <script src="js/demo4/animation_brand.js"></script>
     <div class="scroll-animation">
       <img src="img/Scroll Down.gif" alt="scroll down">
