--- a/index.html
+++ b/index.html
@@ -132,11 +132,10 @@
 
   <!-- Sección brand -->
   <section class="brand">
-    <script src="js/demo4/animation_brand.js"></script>
+    <script clas="branding" src="js/demo4/animation_brand.js"></script>
     <div class="scroll-animation">
       <img src="img/Scroll Down.gif" alt="scroll down">
     </div>
-    <>
       <script>
         window.addEventListener('scroll', function () {
           const scrollY = window.scrollY;
