--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@ gsap.registerPlugin(ScrollTrigger);
     {
       opacity: 1,
       y: 0,
-      duration: 1.2,
+      duration: 2,
       ease: "power2.out",
       scrollTrigger: {
         trigger: "#left-column",
-        start: "top",
+        start: "top 25%",
         end: "top 10%", 
         toggleActions: "restart none none reset", 
       }
@@ -214,11 +214,11 @@ gsap.registerPlugin(ScrollTrigger);
     {
       opacity: 1,
       y: 0,
-      duration: 1.2,
+      duration: 2,
       ease: "power2.out",
       scrollTrigger: {
         trigger: "#left-column",
-        start: "top",
+        start: "top 25%",
         end: "top 10%", 
         toggleActions: "restart none none reset", 
       }
