--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
     <path d="M495.01,80.63v413.88H81.13c-41.77,0-75.63-33.86-75.63-75.63V4.99h413.88
       C461.14,4.99,495.01,38.86,495.01,80.63z"
-      fill="#eeeeee" stroke="#232323" stroke-width="5" />
+      fill="none" stroke="#efefef" stroke-width="15" />
   </svg>
 </div>
 
