animation  colective  winsorht

--- a/index.html
+++ b/index.html
@@ -35,25 +35,24 @@
 <body class="loading demo-4">
 
 
-<body>
+  <body>
 
 
 
 
-  <!-- SVG PUNTERO -->
-<div class="custom-cursor">
-  <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-    <defs>
-      <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="100%">
-        <stop offset="0%" stop-color="#FFC043" />
-        <stop offset="100%" stop-color="#F86230" />
-      </linearGradient>
-    </defs>
-    <path d="M495.01,80.63v413.88H81.13c-41.77,0-75.63-33.86-75.63-75.63V4.99h413.88
-      C461.14,4.99,495.01,38.86,495.01,80.63z"
-      fill="none" stroke="url(#grad)" stroke-width="15" />
-  </svg>
-</div>
+    <!-- SVG PUNTERO -->
+    <div class="custom-cursor">
+      <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="100%">
+            <stop offset="0%" stop-color="#FFC043" />
+            <stop offset="100%" stop-color="#F86230" />
+          </linearGradient>
+        </defs>
+        <path d="M495.01,80.63v413.88H81.13c-41.77,0-75.63-33.86-75.63-75.63V4.99h413.88
+      C461.14,4.99,495.01,38.86,495.01,80.63z" fill="none" stroke="url(#grad)" stroke-width="15" />
+      </svg>
+    </div>
 
 
     <script src="js/demo4/cursor.js">  </script>
@@ -61,79 +60,79 @@
 
 
 
-  <!-- Loader -->
-  <div id="loader-overlay">
-    <div class="corner-icon1 top-left1">
-      <img id="svg3" class="icon4" src="img/bran-icon-01.svg" alt="Icono inicio">
-    </div>
-    <div class="loader-box">
-      <div id="text_loading" class="text_load">Preparando recursos…</div>
-      <div id="text_parpadeando">
-        <p id="loading"></p>
+    <!-- Loader -->
+    <div id="loader-overlay">
+      <div class="corner-icon1 top-left1">
+        <img id="svg3" class="icon4" src="img/bran-icon-01.svg" alt="Icono inicio">
+      </div>
+      <div class="loader-box">
+        <div id="text_loading" class="text_load">Preparando recursos…</div>
+        <div id="text_parpadeando">
+          <p id="loading"></p>
+        </div>
+      </div>
+      <div class="corner-icon1 bottom-right1">
+        <img id="svg4" class="icon4" src="img/bran-icon-02.svg" alt="Icono final">
       </div>
     </div>
-    <div class="corner-icon1 bottom-right1">
-      <img id="svg4" class="icon4" src="img/bran-icon-02.svg" alt="Icono final">
-    </div>
-  </div>
-  <div class="layout">
-    <header class="sidebar" id="site-header">
-      <div id="svg-container"></div>
-    </header>
-    <!-- Botón Hamburguesa -->
-    <button class="hamburger" id="menu-toggle" aria-label="Abrir menú">
-      <span></span>
-      <span></span>
-      <span></span>
+    <div class="layout">
+      <header class="sidebar" id="site-header">
+        <div id="svg-container"></div>
+      </header>
+      <!-- Botón Hamburguesa -->
+      <button class="hamburger" id="menu-toggle" aria-label="Abrir menú">
+        <span></span>
+        <span></span>
+        <span></span>
 
-    </button>
-    <nav class="menu-fullscreen" id="fullscreen-menu">
-      <button class="close-menu" id="close-menu" aria-label="Cerrar menú">✕</button>
-      <a href="#" class="menu__item" data-scrollto="0" data-i18n="menu home"></a>
-      <a href="#map" class="menu__item" data-i18n="menu about"></a>
-      <a href="#" class="menu__item" data-i18n="menu projects"></a>
-      <a href="#contact" class="menu__item" data-i18n="menu contact"></a>
-      <button id="lang-toggle" class="lang-btn">ES</button>
-      <div class="social-icons">
-        <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-          <img class="redes-sociales" src="img/social_networt_icon/facebook.png">
-        </a>
-        <a href="https://x.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
-          <img class="redes-sociales" src="img/social_networt_icon/twitter.png">
-        </a>
-        <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-          <img class="redes-sociales" src="img/social_networt_icon/linkedin.png">
-        </a>
-        <a href="https://instagran.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-          <img class="redes-sociales" src="img/social_networt_icon/instagram.png">
-        </a>
+      </button>
+      <nav class="menu-fullscreen" id="fullscreen-menu">
+        <button class="close-menu" id="close-menu" aria-label="Cerrar menú">✕</button>
+        <a href="#" class="menu__item" data-scrollto="0" data-i18n="menu home"></a>
+        <a href="#map" class="menu__item" data-i18n="menu about"></a>
+        <a href="#" class="menu__item" data-i18n="menu projects"></a>
+        <a href="#contact" class="menu__item" data-i18n="menu contact"></a>
+        <button id="lang-toggle" class="lang-btn">ES</button>
+        <div class="social-icons">
+          <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+            <img class="redes-sociales" src="img/social_networt_icon/facebook.png">
+          </a>
+          <a href="https://x.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+            <img class="redes-sociales" src="img/social_networt_icon/twitter.png">
+          </a>
+          <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+            <img class="redes-sociales" src="img/social_networt_icon/linkedin.png">
+          </a>
+          <a href="https://instagran.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+            <img class="redes-sociales" src="img/social_networt_icon/instagram.png">
+          </a>
+        </div>
+      </nav>
+
+
+
+      <script src="js/demo4/gsap-menu.js">  </script>
+      </header>
+      <script src="js/demo4/menu.js"></script>
+    </div>
+
+
+
+
+    <main>
+      <div class="frame frame--header">
+        <div class="frame__heading">
+        </div>
       </div>
-    </nav>
+    </main>
 
 
-
-    <script src="js/demo4/gsap-menu.js">  </script>
-    </header>
-    <script src="js/demo4/menu.js"></script>
-  </div>
-
-
-
-
-  <main>
-    <div class="frame frame--header">
-      <div class="frame__heading">
+    <!-- Sección brand -->
+    <section class="brand">
+      <script clas="branding" src="js/demo4/animation_brand.js"></script>
+      <div class="scroll-animation">
+        <img src="img/Scroll Down.gif" alt="scroll down">
       </div>
-    </div>
-  </main>
-
-
-  <!-- Sección brand -->
-  <section class="brand">
-    <script clas="branding" src="js/demo4/animation_brand.js"></script>
-    <div class="scroll-animation">
-      <img src="img/Scroll Down.gif" alt="scroll down">
-    </div>
       <script>
         window.addEventListener('scroll', function () {
           const scrollY = window.scrollY;
@@ -147,142 +146,144 @@
         });
 
       </script>
-  </section>
-  
-  <section id="map" class="map main-content">
-    <div id="brand" class="layout">
-      <div id="cornerTL-wrapper" class="svg-icon svg-icon--top-left">
-        <canvas id="canvasTL" width="80" height="80"></canvas>
-      </div>
-      <!-- COLUMNA IZQUIERDA -->
-      <div id="left-column" class="left-column">
-        <!-- TEXTO CENTRO -->
-        <div id="content-row">
-          <div class="content content--highlight content--intro">
-            <p class="text-large_w">
-              <mark class="hx hx-3" data-i18n="hero_highlighted_text"></mark>
-              <span data-i18n="hero_intro_text"></span>
+    </section>
+
+    <section id="map" class="map main-content">
+      <div id="brand" class="layout">
+        <div id="cornerTL-wrapper" class="svg-icon svg-icon--top-left">
+          <canvas id="canvasTL" width="80" height="80"></canvas>
+        </div>
+        <!-- COLUMNA IZQUIERDA -->
+        <div id="left-column" class="left-column">
+          <!-- TEXTO CENTRO -->
+          <div id="content-row">
+            <div class="content content--highlight content--intro">
+              <p class="text-large_w">
+                <mark class="hx hx-3" data-i18n="hero_highlighted_text"></mark>
+                <span data-i18n="hero_intro_text"></span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <script>
+          gsap.registerPlugin(ScrollTrigger);
+          gsap.fromTo("#content-row",
+            { opacity: 0, y: 50 },
+            {
+              opacity: 1,
+              y: 0,
+              duration: 2,
+              ease: "power2.out",
+              scrollTrigger: {
+                trigger: "#left-column",
+                start: "top 25%",
+                end: "top 10%",
+                toggleActions: "restart none none reset",
+              }
+            }
+          );
+        </script>
+
+
+        <!-- COLUMNA DERECHA -->
+        <div id="maping-contorler" class="right-column">
+          <!-- MAPA -->
+          <div id="svg-container1" class="svg-container"></div>
+          <div id="svg-container2" class="svg-container"></div>
+          <div class="center-controls">
+            <p class="text-large_M">
+              <mark class="hx-1 hx-2" data-i18n="CDMX Traffic"></mark>
             </p>
+            <span id="hourLabel" class="hour">--:--</span>
+            <input id="hourSlider" type="range" min="0" max="23" step="1">
+          </div>
+        </div>
+        <div id="cornerBR-wrapper" class="svg-icon svg-icon--bottom-right">
+          <canvas id="canvasBiR" width="120" height="120"></canvas>
+        </div>
+      </div>
+
+      <script>
+        gsap.registerPlugin(ScrollTrigger);
+        gsap.fromTo("#maping-contorler",
+          { opacity: 0, y: 50 },
+          {
+            opacity: 1,
+            y: 0,
+            duration: 2,
+            ease: "power2.out",
+            scrollTrigger: {
+              trigger: "#left-column",
+              start: "top 25%",
+              end: "top 10%",
+              toggleActions: "restart none none reset",
+            }
+          }
+        );
+      </script>
+
+    </section>
+
+    <script src="js/demo4/icons_bran.js"></script>
+    <script src="js/demo4/scroll_animation.js"></script>
+    <script src="js/demo4/animation_hero.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="js/demo4/script_map.js"></script>
+
+
+    <script type="module" src="js/demo4/traduction.js"></script>
+    <script src="js/demo4/ramdon_color.js"></script>
+
+
+    <!-- Sticky content -->
+    <div class="wrap ">
+      <div class="content content--sticky bg-1">
+        <div class="content__grid">
+          <div class="content__textual">
+            <h2 class="content__title titlle-1">
+              <span data-i18n="Technology as a Force for"></span>
+              <span class="content__title_h2" data-i18n="Human Potential"></span>
+            </h2>
+            <p class="content__text text-meta" data-i18n="text of Human Potential"></p>
+          </div>
+          <div class="content__img-wrapper">
+            <div class="color_brand content__img content__img--large" id="circle_arrow"></div>
+            <script src="js/demo4/1_animation.js"></script>
           </div>
         </div>
       </div>
 
-<script>
-gsap.registerPlugin(ScrollTrigger);
-  gsap.fromTo("#content-row",
-    { opacity: 0, y: 50 },
-    {
-      opacity: 1,
-      y: 0,
-      duration: 2,
-      ease: "power2.out",
-      scrollTrigger: {
-        trigger: "#left-column",
-        start: "top 25%",
-        end: "top 10%", 
-        toggleActions: "restart none none reset", 
-      }
-    }
-  );
-</script>
-
-
-      <!-- COLUMNA DERECHA -->
-      <div id="maping-contorler"class="right-column">
-        <!-- MAPA -->
-        <div id="svg-container1" class="svg-container"></div>
-        <div id="svg-container2" class="svg-container"></div>
-        <div class="center-controls">
-          <p class="text-large_M">
-            <mark class="hx-1 hx-2" data-i18n="CDMX Traffic"></mark>
-          </p>
-          <span id="hourLabel" class="hour">--:--</span>
-          <input id="hourSlider" type="range" min="0" max="23" step="1">
+      <!-- BG 2 -->
+      <div class="content content--sticky bg-2">
+        <div class="content__grid">
+          <div class="content__textual">
+            <h2 class="content__title titlle-2">
+              <span data-i18n="Experimentation"></span>
+              <span class="content__title_h2" data-i18n="The Pathway to Innovation"></span>
+            </h2>
+            <p class="content__text text-meta" data-i18n="text of The Pathway to Innovation"></p>
+          </div>
+          <div class="content__img-wrapper">
+            <img class="content__img content__img--large" src="img/10.png" alt="Innovation image" />
+          </div>
         </div>
       </div>
-      <div id="cornerBR-wrapper" class="svg-icon svg-icon--bottom-right">
-        <canvas id="canvasBiR" width="120" height="120"></canvas>
-      </div>
-    </div>
 
-    <script>
-gsap.registerPlugin(ScrollTrigger);
-  gsap.fromTo("#maping-contorler",
-    { opacity: 0, y: 50 },
-    {
-      opacity: 1,
-      y: 0,
-      duration: 2,
-      ease: "power2.out",
-      scrollTrigger: {
-        trigger: "#left-column",
-        start: "top 25%",
-        end: "top 10%", 
-        toggleActions: "restart none none reset", 
-      }
-    }
-  );
-</script>
-
-  </section>
-
-  <script src="js/demo4/icons_bran.js"></script>
-  <script src="js/demo4/scroll_animation.js"></script>
-  <script src="js/demo4/animation_hero.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script src="js/demo4/script_map.js"></script>
-
-
-  <script type="module" src="js/demo4/traduction.js"></script>
-  <script src="js/demo4/ramdon_color.js"></script>
-
-
-  <!-- Sticky content -->
-  <div class="wrap ">
-    <div class="content content--sticky bg-1">
-      <div class="content__grid">
-        <div class="content__textual">
-          <h2 class="content__title titlle-1">
-            <span data-i18n="Technology as a Force for"></span>
-            <span class="content__title_h2" data-i18n="Human Potential"></span>
-          </h2>
-          <p class="content__text text-meta" data-i18n="text of Human Potential"></p>
-        </div>
-        <div class="content__img-wrapper">
-          <div class="color_brand content__img content__img--large" id="circle_arrow"></div>
-          <script src="js/demo4/1_animation.js"></script>
-        </div>
-      </div>
-    </div>
-
-    <!-- BG 2 -->
-    <div class="content content--sticky bg-2">
-      <div class="content__grid">
-        <div class="content__textual">
-          <h2 class="content__title titlle-2">
-            <span data-i18n="Experimentation"></span>
-            <span class="content__title_h2" data-i18n="The Pathway to Innovation"></span>
-          </h2>
-          <p class="content__text text-meta" data-i18n="text of The Pathway to Innovation"></p>
-        </div>
-        <div class="content__img-wrapper">
-          <img class="content__img content__img--large" src="img/10.png" alt="Innovation image" />
-        </div>
-      </div>
-    </div>
-
-    <!-- BG 3 -->
-    <div class="content content--sticky bg-3">
-      <div class="content__grid">
-        <div class="content__textual">
-          <h2 class="content__title titlle-3">
-            <span data-i18n="Harnessing"></span>
-            <span class="content__title_h2" data-i18n="Collective Wisdom"></span>
-          </h2>
-          <p class="content__text text-meta" data-i18n="text of the Collective Wisdom"></p>
-        </div>
-        <div class="content__img-wrapper">
-          <img class="content__img content__img--large" src="img/11.png" alt="Collective Wisdom" />
+      <!-- BG 3 -->
+      <div class="content content--sticky bg-3">
+        <div class="content__grid">
+          <div class="content__textual">
+            <h2 class="content__title titlle-3">
+              <span data-i18n="Harnessing"></span>
+              <span class="content__title_h2" data-i18n="Collective Wisdom"></span>
+            </h2>
+            <p class="content__text text-meta" data-i18n="text of the Collective Wisdom"></p>
+          </div>
+          <div class="content__img-wrapper">
+            <div class="color_brand content__img content__img--large" id="colective-winsorth"></div>
+            <script src="js/demo4/3_animation.js"></script>
+          </div>
         </div>
       </div>
     </div>
@@ -297,8 +298,10 @@ gsap.registerPlugin(ScrollTrigger);
           </h2>
           <p class="content__text text-meta" data-i18n="text of the A Shared Responsibility"></p>
         </div>
+
         <div class="content__img-wrapper">
-          <img class="content__img content__img--large" src="img/12.png" alt="Shared Responsibility" />
+          <div class="color_brand content__img content__img--large" id="colaboration-public-private"></div>
+          <script src="js/demo4/4_animation.js"></script>
         </div>
       </div>
     </div>
@@ -350,31 +353,31 @@ gsap.registerPlugin(ScrollTrigger);
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="content content--highlight content--outro">
-    <p class="text-large_w" data-i18n="text of the to Action">
-    </p>
-    <br><br>
-    <p class="text-large_M"> <mark class="hx hx-3" data-i18n="text 2 of the to Action"></mark> </p>
-    </p>
-  </div>
-
-  <footer id="contact">
-    <div class="footer-container">
-      <h3 class="hover-image" style="--img:url(../../img/4.png)">One "X" word (Explora)</h3>
-      <h3 class="hover-image" style="--img:url(../../img/5.png)">Two "X" word (Experimenta)</h3>
-      <h3 class="hover-image" style="--img:url(../../img/8.png)">Three "X" word ()</h3>
     </div>
-    <div class="footer-bottom">
-      <p class="text-meta">© 2025 INDIx. All rights reserved.</p>
-      <p class="text-meta">Powered by
-        <a href="https://www.grupoindi.com/" target="_blank" rel="noopener noreferrer">Grupo INDI</a>
+
+    <div class="content content--highlight content--outro">
+      <p class="text-large_w" data-i18n="text of the to Action">
+      </p>
+      <br><br>
+      <p class="text-large_M"> <mark class="hx hx-3" data-i18n="text 2 of the to Action"></mark> </p>
       </p>
     </div>
-  </footer>
 
-  <script src="js/imagesloaded.pkgd.min.js"></script>
-</body>
+    <footer id="contact">
+      <div class="footer-container">
+        <h3 class="hover-image" style="--img:url(../../img/4.png)">One "X" word (Explora)</h3>
+        <h3 class="hover-image" style="--img:url(../../img/5.png)">Two "X" word (Experimenta)</h3>
+        <h3 class="hover-image" style="--img:url(../../img/8.png)">Three "X" word ()</h3>
+      </div>
+      <div class="footer-bottom">
+        <p class="text-meta">© 2025 INDIx. All rights reserved.</p>
+        <p class="text-meta">Powered by
+          <a href="https://www.grupoindi.com/" target="_blank" rel="noopener noreferrer">Grupo INDI</a>
+        </p>
+      </div>
+    </footer>
+
+    <script src="js/imagesloaded.pkgd.min.js"></script>
+  </body>
 
 </html>
