--- a/index.html
+++ b/index.html
@@ -332,8 +332,10 @@
           </h2>
           <p class="content__text text-meta" data-i18n="text of and Partnership"></p>
         </div>
+
         <div class="content__img-wrapper">
-          <img class="content__img content__img--large" src="img/9.png" alt="Collaboration and Partnership" />
+          <div class="color_brand content__img content__img--large" id="collavoration"></div>
+          <script src="js/demo4/6_animation.js"></script>
         </div>
       </div>
     </div>
