--- a/index.html
+++ b/index.html
@@ -350,8 +350,9 @@
           </h2>
           <p class="content__text text-meta" data-i18n="text of the in Innovation"></p>
         </div>
-        <div class="content__img-wrapper">
-          <img class="content__img content__img--large" src="img/8.png" alt="Innovation Identity" />
+          <div class="content__img-wrapper">
+          <div class="color_brand content__img content__img--large" id="innovation"></div>
+          <script src="js/demo4/7_animation.js"></script>
         </div>
       </div>
     </div>
