--- a/index.html
+++ b/index.html
@@ -264,9 +264,10 @@
             </h2>
             <p class="content__text text-meta" data-i18n="text of The Pathway to Innovation"></p>
           </div>
-          <div class="content__img-wrapper">
-            <img class="content__img content__img--large" src="img/10.png" alt="Innovation image" />
-          </div>
+        <div class="content__img-wrapper">
+          <div class="color_brand content__img content__img--large" id="experimentation"></div>
+          <script src="js/demo4/2_animation.js"></script>
+        </div>
         </div>
       </div>
 
