--- a/index.html
+++ b/index.html
@@ -318,7 +318,8 @@
           <p class="content__text text-meta" data-i18n="text of the and Responsive Agenda"></p>
         </div>
         <div class="content__img-wrapper">
-          <img class="content__img content__img--large" src="img/8.png" alt="Responsive Agenda" />
+          <div class="color_brand content__img content__img--large" id="fluid"></div>
+          <script src="js/demo4/5_animation.js"></script>
         </div>
       </div>
     </div>
